--- a/src/TidyWindow.App/Resources/RegistryOptimizer.xaml
+++ b/src/TidyWindow.App/Resources/RegistryOptimizer.xaml
@@ -69,6 +69,17 @@
                 Value="12"/>
         <Setter Property="Padding"
                 Value="20"/>
+        <Setter Property="SnapsToDevicePixels"
+                Value="True"/>
+        <Setter Property="UseLayoutRounding"
+                Value="True"/>
+        <Setter Property="RenderOptions.BitmapScalingMode"
+                Value="HighQuality"/>
+        <Setter Property="CacheMode">
+            <Setter.Value>
+                <BitmapCache EnableClearType="True"/>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style x:Key="RegistryToggleRowStyle"
@@ -85,6 +96,15 @@
                 Value="20"/>
         <Setter Property="SnapsToDevicePixels"
                 Value="True"/>
+        <Setter Property="UseLayoutRounding"
+                Value="True"/>
+        <Setter Property="RenderOptions.BitmapScalingMode"
+                Value="HighQuality"/>
+        <Setter Property="CacheMode">
+            <Setter.Value>
+                <BitmapCache EnableClearType="True"/>
+            </Setter.Value>
+        </Setter>
         <Setter Property="Effect"
                 Value="{StaticResource RegistryRowShadow}"/>
     </Style>
